--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="skill-category">
           <h3>Cloud Services</h3>
-          <p>AWS (Lambda, EC2, S3, ECR), Azure (App Services, Azure Blob Storage, Azure Database)</p>
+          <p>AWS (Lambda, EC2, S3, ECR, API Gateway), Azure (App Services, Azure Blob Storage, Azure Database)</p>
         </div>
 
         <div class="skill-category">
