--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </div>
 
         <div class="skill-category">
-          <h3>Data Science</h3>
-          <p>PowerBI (DAX), Spark, Airflow, Matplotlib, Pandas</p>
+          <h3>Data Science (ETL)</h3>
+          <p>PowerBI (DAX), Spark, Airflow, Matplotlib, Pandas, Tableau</p>
         </div>
 
         <div class="skill-category">
