--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
             <a href="https://github.com/JafetDS/Proyecto1Datos2C" target="_blank">GitHub</a>
           </div>
         </div>
+
+       <div class="project-card">
+          <h3>Digital Control System</h3>
+          <p>Signal control using a system of logic gates for Communication and arithmetic calculation in Logisim.</p>
+          <div class="project-links">
+            <a href="https://github.com/DixonJafet/Control_System" target="_blank">GitHub</a>
+          </div>
+        </div>
       </section>
 
       <section class="skills">
