--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="project-card">
           <h3>VirtualClassRoom</h3>
-          <p>Management system designed for professors, similar to Google Classroom.</p>
+          <p>Management system designed for professors, similar to Google Classroom using Azure Cloud hosting .</p>
           <div class="project-links">
             <a href="https://github.com/DixonJafet/VirtualClassRoom" target="_blank">GitHub</a>
             <a href="https://virtual-class-room-peach.vercel.app" target="_blank">Live Demo</a>
@@ -63,7 +63,7 @@
 
         <div class="project-card">
           <h3>DixonGPT</h3>
-          <p>Chat AI powered by a Mini LLM model running in Docker Container.</p>
+          <p>Chat AI powered by a Mini LLM model running on Amazon AWS Services in Docker Container.</p>
           <div class="project-links">
             <a href="https://github.com/DixonJafet/DixonGPT" target="_blank">GitHub</a>
             <a href="https://dixon-gpt.vercel.app" target="_blank">Live Demo</a>
