--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="project-card">
           <h3>Data Science Projects</h3>
-          <p>A repository containing various Data Science projects.</p>
+          <p>A repository containing various Data Science projects. (PowerBI, PySpark, Pandas, etc ...)</p>
           <div class="project-links">
             <a href="https://github.com/DixonJafet/DataAnalysis" target="_blank">GitHub</a>
             <a href="https://colab.research.google.com/drive/1yBgCDW8X2QICDE2C087UfiRKXnCXsBN?usp=sharing" target="_blank">Sample Project</a>
