--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
           <p>A repository containing various Data Science projects. (PowerBI, PySpark, Pandas, etc ...)</p>
           <div class="project-links">
             <a href="https://github.com/DixonJafet/DataAnalysis" target="_blank">GitHub</a>
-            <a href="https://colab.research.google.com/drive/1yBgCDW8X2QICDE2C087UfiRKXnCXsBN?usp=sharing" target="_blank">Sample Project</a>
+            <a href="https://colab.research.google.com/drive/1yBgCDW8X2QICDE2C087UfiRKXnC-XsBN?usp=sharing" target
+            ="_blank">Sample Project</a>
           </div>
         </div>
 
